--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,15 +14,22 @@
             android:id="@+id/por" app:layout_constraintStart_toEndOf="@+id/tres" android:layout_marginStart="16dp"
             android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/menos"
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp"/>
+
     <Button
-            android:text="/"
+            android:id="@+id/entre"
             android:layout_width="66dp"
             android:layout_height="44dp"
-            android:id="@+id/entre"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="24dp"
+            android:layout_marginEnd="32dp"
+            android:text="/"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.511"
             app:layout_constraintStart_toEndOf="@+id/borrar"
-            android:layout_marginStart="16dp" android:layout_marginTop="24dp"
-            app:layout_constraintTop_toBottomOf="@+id/por" app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="32dp"/>
+            app:layout_constraintTop_toBottomOf="@+id/por"
+            app:layout_constraintVertical_bias="0.0" />
+
     <Button
             android:text="3"
             android:layout_width="66dp"
@@ -48,29 +55,45 @@
             android:id="@+id/uno" android:layout_marginTop="24dp"
             app:layout_constraintTop_toBottomOf="@+id/cuatro" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="24dp"/>
+
     <Button
-            android:text="0"
-            android:layout_width="66dp"
-            android:layout_height="44dp"
             android:id="@+id/cero"
+            android:layout_width="66dp"
+            android:layout_height="44dp"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="24dp"
+            android:text="0"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="24dp" android:layout_marginTop="24dp"
-            app:layout_constraintTop_toBottomOf="@+id/uno"/>
+            app:layout_constraintTop_toBottomOf="@+id/uno"
+            app:layout_constraintVertical_bias="0.0" />
+
     <Button
-            android:text="RESULT"
-            android:layout_width="66dp"
-            android:layout_height="44dp"
             android:id="@+id/result"
-            android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/dos"
-            app:layout_constraintStart_toEndOf="@+id/cero" android:layout_marginStart="16dp" android:textSize="10sp"/>
-    <Button
-            android:text="BORRAR"
             android:layout_width="66dp"
             android:layout_height="44dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="24dp"
+            android:text="RESULT"
+            android:textSize="10sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/cero"
+            app:layout_constraintTop_toBottomOf="@+id/dos"
+            app:layout_constraintVertical_bias="0.0" />
+
+    <Button
             android:id="@+id/borrar"
-            android:textSize="10sp" android:layout_marginTop="24dp"
-            app:layout_constraintTop_toBottomOf="@+id/tres" app:layout_constraintStart_toEndOf="@+id/result"
-            android:layout_marginStart="16dp"/>
+            android:layout_width="66dp"
+            android:layout_height="44dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="24dp"
+            android:text="BORRAR"
+            android:textSize="10sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/result"
+            app:layout_constraintTop_toBottomOf="@+id/tres"
+            app:layout_constraintVertical_bias="0.0" />
+
     <Button
             android:text="5"
             android:layout_width="66dp"
@@ -119,14 +142,21 @@
             android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
             app:layout_constraintHorizontal_bias="0.517" android:textSize="18sp" android:textAlignment="textEnd"
             android:id="@+id/ecuacion"/>
+
     <TextView
-            android:text="Calculadora"
+            android:id="@+id/calculadora"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/calculadora" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-            android:layout_marginTop="32dp" app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintHorizontal_bias="0.501" android:textAllCaps="false" android:textSize="24sp"/>
+            android:layout_height="32dp"
+            android:text="Calculadora"
+            android:textAllCaps="false"
+            android:textSize="24sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.485"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.107" />
+
     <Button
             android:text="7"
             android:layout_width="66dp"
